--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 </head>
 
 <style>
+    html, body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
 .skill-text {
     font-weight: 600;
     margin-bottom: 5px;
