--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
     max-width: 100%;
 }
 
+/* Prevent Bootstrap containers from causing overflow */
+.container,
+.container-fluid,
+.row {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+/* Make all images responsive and prevent overflow */
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 .skill-text {
     font-weight: 600;
     margin-bottom: 5px;
