--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="row flex-row-reverse justify-content-center align-items-center">
                 <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-duration="1400">
                     <div class="position-relative">
-                        <img src="images/profile.jpg" alt="img" class="img-fluid rounded-circle w-100 p-5">
+                        <img src="images/osh.jpg" alt="img" class="img-fluid rounded-circle w-100 p-5">
                         <div class="position-absolute top-0">
                             <img src="images/banner-img-border.png" alt="img"
                                 class="img-fluid rounded-circle animated-border">
